--- a/recruitment-offices-request.html
+++ b/recruitment-offices-request.html
@@ -208,11 +208,11 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="text-center">
-                        <h1 class="text-white mb-0"> طلب استقدام </h1>
+                        <h1 class="text-white mb-0"> روافد نجد  </h1>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb breadcrumb-light justify-content-center mt-4">
-                                <li class="breadcrumb-item"><a href="#"> الرئيسية </a></li>
-                                <li class="breadcrumb-item active" aria-current="page"> طلب استقدام </li>
+                                <li class="breadcrumb-item"><a href="#"> مكاتب الاستقدام </a></li>
+                                <li class="breadcrumb-item active" aria-current="page"> روافد نجد  </li>
                             </ol>
                         </nav>
                     </div>
@@ -280,51 +280,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <!-- end accordion-item -->
-                            <div class="accordion-item">
-                                <h2 class="accordion-header">
-                                    <button class="accordion-button bg-transparent shadow-none" type="button"
-                                        data-bs-toggle="collapse" data-bs-target="#flush-collapseCompany"
-                                        aria-expanded="true" aria-controls="flush-collapseCompany">
-                                        <span class="text-muted text-uppercase fs-12 fw-medium"> مكاتب الاستقدام </span>
-                                        <span
-                                            class="badge bg-success rounded-pill align-middle ms-1 filter-badge"></span>
-                                    </button>
-                                </h2>
-                                <div id="flush-collapseCompany" class="accordion-collapse collapse show">
-                                    <div class="accordion-body text-body pt-0">
-                                        <div class="search-box search-box-sm">
-                                            <input type="text" class="form-control bg-light border-0"
-                                                id="searchBrandsList" placeholder=" بحث عن مكتب ... ">
-                                            <i class="ri-search-line search-icon"></i>
-                                        </div>
-                                        <div class="d-flex flex-column gap-2 mt-3 filter-check">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" id="companyRadio5">
-                                                <label class="form-check-label" for="companyRadio5"> روفد </label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" id="companyRadio4">
-                                                <label class="form-check-label" for="companyRadio4"> الشرق </label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" id="companyRadio3">
-                                                <label class="form-check-label" for="companyRadio3"> العامة
-                                                </label>
-                                            </div>
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" id="companyRadio2">
-                                                <label class="form-check-label" for="companyRadio2"> سهل </label>
-                                            </div>
-                                            <div>
-                                                <button type="button"
-                                                    class="btn btn-link text-decoration-none text-uppercase fw-medium p-0">1,235
-                                                    اخري </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                           
                             <!-- end accordion-item -->
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
@@ -413,7 +369,7 @@
 
                     <div class="row">
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-1.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4> خالد توفيق مجدى </h4>
