--- a/recruitment-offices.html
+++ b/recruitment-offices.html
@@ -153,10 +153,12 @@
                         <!-- item-->
                         <h6 class="dropdown-header"> ريان سلمون </h6>
                         <a class="dropdown-item" href="account.html"> <i class="fa-light fa-user"></i> حسابي </a>
-                        <a class="dropdown-item" href="auth-signin.html"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
+                        <a class="dropdown-item" href="auth-signin.html"> <i
+                                class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
-                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
-                        
+                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
+                            حساب </a>
+
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
@@ -204,114 +206,129 @@
         <i class="ri-arrow-up-line"></i>
     </button>
     <!--end back-to-top-->
-    <section class="term-condition bg-primary">
+    <section class="ecommerce-about"
+        style="background-image: url('assets/images/s3.webp'); background-size: cover;background-position: center;">
+        <div class="bg-overlay bg-primary" style="opacity: 0.85;"></div>
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="text-center">
-                        <h1 class="text-white mb-2">سياسة الخصوصية</h1>
-                        <p class="text-white-75 mb-0">تم نشر سياسة الخصوصية هذه في 24 نوفمبر 2023.</p>
+                        <h1 class="text-white mb-0"> مكاتب الاستقدام </h1>
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb breadcrumb-light justify-content-center mt-4">
+                                <li class="breadcrumb-item"><a href="#"> الرئيسية </a></li>
+                                <li class="breadcrumb-item active" aria-current="page"> مكاتب الاستقدام </li>
+                            </ol>
+                        </nav>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <div class="position-relative">
-        <div class="svg-shape">
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-                width="1440" height="120" preserveAspectRatio="none" viewBox="0 0 1440 120">
-                <g mask="url(&quot;#SvgjsMask1039&quot;)" fill="none">
-                    <rect width="1440" height="120" x="0" y="0" fill="var(--tb-primary)"></rect>
-                    <path d="M 0,85 C 288,68.8 1152,20.2 1440,4L1440 120L0 120z" fill="var(--tb-body-bg)"></path>
-                </g>
-                <defs>
-                    <mask id="SvgjsMask1039">
-                        <rect width="1440" height="120" fill="#ffffff"></rect>
-                    </mask>
-                </defs>
-            </svg>
-        </div>
-    </div>
-    <section class="section pt-0">
+    <section class="section  bestCompanies " style="background-image: none; background-color: #f5f5f5;">
         <div class="container">
-            <div class="card term-card mb-0">
-                <div class="card-body p-lg-5">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h5 class="fs-18 mb-3">المقدمة</h5>
-                            <div class="d-flex gap-2 mb-2">
-                                <div class="flex-shrink-0">
-                                    <i class="ri-flashlight-fill text-primary fs-15"></i>
-                                </div>
-                                <p class="text-muted fs-15 flex-grow-1 mb-0">عمومًا، قد نقوم بجمع واستخدام المعلومات
-                                    الشخصية لأغراض عديدة، بما في ذلك، على سبيل المثال لا الحصر: الفواتير، وإنجاز
-                                    المنتجات والخدمات، وفهم احتياجات العملاء، وتوفير موقع إلكتروني أفضل، وتحسين المنتجات
-                                    والخدمات، والتواصل مع العملاء والعملاء المحتملين بشأن منتجاتنا وخدماتنا مع منتجات
-                                    وخدمات الأطراف الثالثة.</p>
+            <div class="search-box ">
+                <input type="text" class="form-control" autocomplete="off" placeholder="البحث عن ...">
+                <i class="ri-search-line search-icon"></i>
+            </div>
+            <div class=" bestOffice">
+                <div class="row py-4">
+                    <!-- slide -->
+                    <div class="col-6 col-md-4 col-xl-3 p-1">
+                        <div class="card card-animate overflow-hidden m-0">
+                            <div class="gallery-product">
+                                <img src="assets/images/companies/1.svg" alt="" class="mx-auto d-block">
                             </div>
-                            <div class="d-flex gap-2 mb-2">
-                                <div class="flex-shrink-0">
-                                    <i class="ri-flashlight-fill text-primary fs-15"></i>
-                                </div>
-                                <p class="text-muted fs-15 flex-grow-1 mb-0">تلتزم شركة عالم الاستقدام بحماية
-                                    المعلومات الشخصية والتجارية التي تشاركها و/أو تخزنها معنا.</p>
+                            <div class="card-body text-center">
+                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                    <h6 class="fs-16 lh-base text-truncate"> عبر الشرق </h6>
+                                </a>
                             </div>
-                            <div class="d-flex gap-2 mb-2">
-                                <div class="flex-shrink-0">
-                                    <i class="ri-flashlight-fill text-primary fs-15"></i>
-                                </div>
-                                <p class="text-muted fs-15 flex-grow-1 mb-0">تنطبق هذه السياسة على المعاملات والأنشطة
-                                    والبيانات المجمعة من خلال موقع عالم الاستقدام والتفاعل الذي قد تكون لديك مع
-                                    حساباتها في وسائل التواصل الاجتماعي ذات الصلة. يرجى مراجعة هذه السياسة بشكل دوري حيث
-                                    قد نقوم بتعديلها دون إشعار مسبق.</p>
+                        </div>
+                    </div>
+                    <!-- slide -->
+                    <div class="col-6 col-md-4 col-xl-3 p-1">
+                        <div class="card card-animate overflow-hidden m-0">
+                            <div class="gallery-product">
+                                <img src="assets/images/companies/2.svg" alt="" class="mx-auto d-block">
                             </div>
-
-                            <h5 class="fs-18 my-3">سياسة الاسترداد</h5>
-                            <div class="d-flex gap-2 mb-2">
-                                <div class="flex-shrink-0">
-                                    <i class="ri-flashlight-fill text-primary fs-15"></i>
-                                </div>
-                                <p class="text-muted fs-15 flex-grow-1 mb-0">نحن في شركة عالم الاستقدام نلتزم بتوفير
-                                    خدمات ومنتجات عالية الجودة لعملائنا، ونتحمل مسؤولية كاملة عن جودة منتجاتنا وخدماتنا.
-                                    وفي حالة عدم رضا العميل عن المنتج أو الخدمة، يمكنه طلب استرداد كامل للمبلغ المدفوع
-                                    خلال 14 يومًا من تاريخ الشراء. ولكن يجب على العميل إرجاع المنتج الذي تم شراؤه في
-                                    حالة الاسترداد.</p>
+                            <div class="card-body text-center">
+                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                    <h6 class="fs-16 lh-base text-truncate"> الجوهرة الاولي </h6>
+                                </a>
                             </div>
-                            <h5 class="fs-18 my-3">استخدام الكوكيز</h5>
-                            <div class="d-flex gap-2 mb-2">
-                                <div class="flex-shrink-0">
-                                    <i class="ri-flashlight-fill text-primary fs-15"></i>
-                                </div>
-                                <p class="text-muted fs-15 flex-grow-1 mb-0">نستخدم ملفات تعريف الارتباط (الكوكيز)
-                                    لتحسين تجربة المستخدم وتحسين الخدمات التي نقدمها. وتستخدم معظم المواقع الإلكترونية
-                                    ملفات تعريف الارتباط لتحسين تجربة المستخدم. ويمكن للمستخدم إدارة إعدادات ملفات تعريف
-                                    الارتباط على مستوى المتصفح لتعطيلها أو حذفها.</p>
+                        </div>
+                    </div>
+                    <!-- slide -->
+                    <div class="col-6 col-md-4 col-xl-3 p-1">
+                        <div class="card card-animate overflow-hidden m-0">
+                            <div class="gallery-product">
+                                <img src="assets/images/companies/3.svg" alt="" class="mx-auto d-block">
                             </div>
-                            <h5 class="fs-18 my-3">إخلاء المسؤولية</h5>
-                            <div class="d-flex gap-2 mb-2">
-                                <div class="flex-shrink-0">
-                                    <i class="ri-flashlight-fill text-primary fs-15"></i>
-                                </div>
-                                <p class="text-muted fs-15 flex-grow-1 mb-0">نحن في شركة عالم الاستقدام غير مسؤولين
-                                    عن أي خسارة أو ضرر يتكبده العميل نتيجة لاستخدام منتجاتنا أو خدماتنا. ونحن غير
-                                    مسؤولين عن أي تأخير في التسليم نتيجة لأسباب خارجة عن إرادتنا مثل الظروف الجوية
-                                </p>
+                            <div class="card-body text-center">
+                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                    <h6 class="fs-16 lh-base text-truncate"> نسمة أكيم </h6>
+                                </a>
                             </div>
-
-
-                            <div class="alert alert-danger">
-                                لن يُسمح باستخدام شعار أو عمل فني خاص بشركة " عالم الاستقدام " للارتباط بدون اتفاقية
-                                ترخيص
-                                العلامة التجارية.
+                        </div>
+                    </div>
+                    <!-- slide -->
+                    <div class="col-6 col-md-4 col-xl-3 p-1">
+                        <div class="card card-animate overflow-hidden m-0">
+                            <div class="gallery-product">
+                                <img src="assets/images/companies/4.svg" alt="" class="mx-auto d-block">
                             </div>
-                            
+                            <div class="card-body text-center">
+                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                    <h6 class="fs-16 lh-base text-truncate"> بلاتنيوم الشرقية </h6>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- slide -->
+                    <div class="col-6 col-md-4 col-xl-3 p-1">
+                        <div class="card card-animate overflow-hidden m-0">
+                            <div class="gallery-product">
+                                <img src="assets/images/companies/5.svg" alt="" class="mx-auto d-block">
+                            </div>
+                            <div class="card-body text-center">
+                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                    <h6 class="fs-16 lh-base text-truncate"> روافد نجد </h6>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- slide -->
+                    <div class="col-6 col-md-4 col-xl-3 p-1">
+                        <div class="card card-animate overflow-hidden m-0">
+                            <div class="gallery-product">
+                                <img src="assets/images/companies/6.svg" alt="" class="mx-auto d-block">
+                            </div>
+                            <div class="card-body text-center">
+                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                    <h6 class="fs-16 lh-base text-truncate"> ترف </h6>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- slide -->
+                    <div class="col-6 col-md-4 col-xl-3 p-1">
+                        <div class="card card-animate overflow-hidden m-0">
+                            <div class="gallery-product">
+                                <img src="assets/images/companies/7.svg" alt="" class="mx-auto d-block">
+                            </div>
+                            <div class="card-body text-center">
+                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                    <h6 class="fs-16 lh-base text-truncate"> موطن </h6>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
 
+            </div>
+        </div><!--end conatiner-->
+    </section>
 
     <!-- footer -->
     <section class="section footer-landing pb-0">
@@ -389,7 +406,7 @@
             </div>
         </div>
     </section>
-<!-- JAVASCRIPT -->
+    <!-- JAVASCRIPT -->
     <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/libs/simplebar/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
@@ -402,5 +419,3 @@
     <script src="assets/js/jquery.fancybox.min.js"></script>
     <script src="assets/js/frontend/custom.js"></script>
 </body>
-
-</html>
