--- a/faq.html
+++ b/faq.html
@@ -101,10 +101,13 @@
                         <a class="nav-link" href="index.html"> الرئيسية </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#!"> مكاتب الاستقدام </a>
+                        <a class="nav-link" href="recruitment-offices.html"> مكاتب الاستقدام </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#!"> طلب استقدام </a>
+                        <a class="nav-link" href="recruitment-request.html"> طلب استقدام </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about-us.html"> من نحن </a>
                     </li>
                     <li class="nav-item dropdown dropdown-hover">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -113,13 +116,13 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-md dropdown-menu-center dropdown-menu-list submenu">
                             <li class="nav-item">
-                                <a href="#!" class="nav-link"> المقالات </a>
+                                <a href="blogs.html" class="nav-link"> المقالات </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#!" class="nav-link"> مركز المساعدة </a>
+                                <a href="faq.html" class="nav-link"> مركز المساعدة </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#!" class="nav-link"> انضم الينا </a>
+                                <a href="privacy-policy.html" class="nav-link"> سياسة الخصوصية </a>
                             </li>
                         </ul>
                     </li>
@@ -147,13 +150,11 @@
                     <div class="dropdown-menu dropdown-menu-end">
                         <!-- item-->
                         <h6 class="dropdown-header"> ريان سلمون </h6>
-                        <a class="dropdown-item" href="#!"> <i class="fa-light fa-user"></i> حسابي </a>
-                        <a class="dropdown-item" href="#!"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
+                        <a class="dropdown-item" href="account.html"> <i class="fa-light fa-user"></i> حسابي </a>
+                        <a class="dropdown-item" href="auth-signin.html"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
-                        <a class="dropdown-item" href="#!"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
-                        <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-to-bracket"></i> طلبات
-                            الاستقدام </a>
-                        <a class="dropdown-item" href="#!"> <i class="fa-sharp fa-light fa-bell"></i> الاشعارات </a>
+                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
+                        
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
