--- a/index.html
+++ b/index.html
@@ -103,10 +103,13 @@
                         <a class="nav-link" href="index.html"> الرئيسية </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#!"> مكاتب الاستقدام </a>
+                        <a class="nav-link" href="recruitment-offices.html"> مكاتب الاستقدام </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#!"> طلب استقدام </a>
+                        <a class="nav-link" href="recruitment-request.html"> طلب استقدام </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about-us.html"> من نحن </a>
                     </li>
                     <li class="nav-item dropdown dropdown-hover">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -115,13 +118,13 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-md dropdown-menu-center dropdown-menu-list submenu">
                             <li class="nav-item">
-                                <a href="#!" class="nav-link"> المقالات </a>
+                                <a href="blogs.html" class="nav-link"> المقالات </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#!" class="nav-link"> مركز المساعدة </a>
+                                <a href="faq.html" class="nav-link"> مركز المساعدة </a>
                             </li>
                             <li class="nav-item">
-                                <a href="#!" class="nav-link"> انضم الينا </a>
+                                <a href="privacy-policy.html" class="nav-link"> سياسة الخصوصية </a>
                             </li>
                         </ul>
                     </li>
@@ -149,13 +152,11 @@
                     <div class="dropdown-menu dropdown-menu-end">
                         <!-- item-->
                         <h6 class="dropdown-header"> ريان سلمون </h6>
-                        <a class="dropdown-item" href="#!"> <i class="fa-light fa-user"></i> حسابي </a>
-                        <a class="dropdown-item" href="#!"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
+                        <a class="dropdown-item" href="account.html"> <i class="fa-light fa-user"></i> حسابي </a>
+                        <a class="dropdown-item" href="auth-signin.html"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
-                        <a class="dropdown-item" href="#!"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
-                        <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-to-bracket"></i> طلبات
-                            الاستقدام </a>
-                        <a class="dropdown-item" href="#!"> <i class="fa-sharp fa-light fa-bell"></i> الاشعارات </a>
+                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
+                        
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
@@ -296,7 +297,7 @@
                         <div class="swiper-wrapper pt-2">
                             <!-- slide -->
                             <div class="swiper-slide">
-                                <a href="#!" class="cv">
+                               <a href="cv-details.html" class="cv">
                                     <img src="assets/images/users/avatar-1.jpg" alt="">
                                     <div class="mainInfo">
                                         <h4> خالد توفيق مجدى </h4>
@@ -325,7 +326,7 @@
                             </div>
                             <!-- slide -->
                             <div class="swiper-slide">
-                                <a href="#!" class="cv">
+                               <a href="cv-details.html" class="cv">
                                     <img src="assets/images/users/avatar-2.jpg" alt="">
                                     <div class="mainInfo">
                                         <h4>عائشة محمد صالح</h4>
@@ -353,7 +354,7 @@
                             </div>
                             <!-- slide -->
                             <div class="swiper-slide">
-                                <a href="#!" class="cv">
+                               <a href="cv-details.html" class="cv">
                                     <img src="assets/images/users/avatar-3.jpg" alt="">
                                     <div class="mainInfo">
                                         <h4>علي عبدالله الحمود</h4>
@@ -382,7 +383,7 @@
                             </div>
                             <!-- slide -->
                             <div class="swiper-slide">
-                                <a href="#!" class="cv">
+                               <a href="cv-details.html" class="cv">
                                     <img src="assets/images/users/avatar-4.jpg" alt="">
                                     <div class="mainInfo">
                                         <h4>نورة سعد الدين</h4>
@@ -547,7 +548,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 p-2">
-                    <a href="#!" class="cv">
+                   <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-1.jpg" alt="">
                         <div class="mainInfo">
                             <h4> خالد توفيق مجدى </h4>
@@ -575,7 +576,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
-                    <a href="#!" class="cv">
+                   <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-2.jpg" alt="">
                         <div class="mainInfo">
                             <h4>عائشة محمد صالح</h4>
@@ -602,7 +603,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
-                    <a href="#!" class="cv">
+                   <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-3.jpg" alt="">
                         <div class="mainInfo">
                             <h4>علي عبدالله الحمود</h4>
@@ -630,7 +631,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
-                    <a href="#!" class="cv">
+                   <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-4.jpg" alt="">
                         <div class="mainInfo">
                             <h4>نورة سعد الدين</h4>
@@ -658,7 +659,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
-                    <a href="#!" class="cv">
+                   <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-1.jpg" alt="">
                         <div class="mainInfo">
                             <h4> خالد توفيق مجدى </h4>
@@ -686,7 +687,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
-                    <a href="#!" class="cv">
+                   <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-2.jpg" alt="">
                         <div class="mainInfo">
                             <h4>عائشة محمد صالح</h4>
