--- a/faq.html
+++ b/faq.html
@@ -202,7 +202,9 @@
         <i class="ri-arrow-up-line"></i>
     </button>
     <!--end back-to-top-->
-    <section class="ecommerce-about bg-primary">
+    <section class="ecommerce-about"
+        style="background-image: url('assets/images/s3.webp'); background-size: cover;background-position: center;">
+        <div class="bg-overlay bg-primary" style="opacity: 0.85;"></div>
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
