--- a/index.html
+++ b/index.html
@@ -153,10 +153,11 @@
                         <!-- item-->
                         <h6 class="dropdown-header"> ريان سلمون </h6>
                         <a class="dropdown-item" href="account.html"> <i class="fa-light fa-user"></i> حسابي </a>
-                        <a class="dropdown-item" href="auth-signin.html"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
+                        <a class="dropdown-item" href="auth-signin.html"> <i
+                                class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
-                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
-                        
+                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
+                            حساب </a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
@@ -297,7 +298,7 @@
                         <div class="swiper-wrapper pt-2">
                             <!-- slide -->
                             <div class="swiper-slide">
-                               <a href="cv-details.html" class="cv">
+                                <a href="cv-details.html" class="cv">
                                     <img src="assets/images/users/avatar-1.jpg" alt="">
                                     <div class="mainInfo">
                                         <h4> خالد توفيق مجدى </h4>
@@ -326,7 +327,7 @@
                             </div>
                             <!-- slide -->
                             <div class="swiper-slide">
-                               <a href="cv-details.html" class="cv">
+                                <a href="cv-details.html" class="cv">
                                     <img src="assets/images/users/avatar-2.jpg" alt="">
                                     <div class="mainInfo">
                                         <h4>عائشة محمد صالح</h4>
@@ -354,7 +355,7 @@
                             </div>
                             <!-- slide -->
                             <div class="swiper-slide">
-                               <a href="cv-details.html" class="cv">
+                                <a href="cv-details.html" class="cv">
                                     <img src="assets/images/users/avatar-3.jpg" alt="">
                                     <div class="mainInfo">
                                         <h4>علي عبدالله الحمود</h4>
@@ -383,7 +384,7 @@
                             </div>
                             <!-- slide -->
                             <div class="swiper-slide">
-                               <a href="cv-details.html" class="cv">
+                                <a href="cv-details.html" class="cv">
                                     <img src="assets/images/users/avatar-4.jpg" alt="">
                                     <div class="mainInfo">
                                         <h4>نورة سعد الدين</h4>
@@ -548,7 +549,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 p-2">
-                   <a href="cv-details.html" class="cv">
+                    <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-1.jpg" alt="">
                         <div class="mainInfo">
                             <h4> خالد توفيق مجدى </h4>
@@ -576,7 +577,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
-                   <a href="cv-details.html" class="cv">
+                    <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-2.jpg" alt="">
                         <div class="mainInfo">
                             <h4>عائشة محمد صالح</h4>
@@ -603,7 +604,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
-                   <a href="cv-details.html" class="cv">
+                    <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-3.jpg" alt="">
                         <div class="mainInfo">
                             <h4>علي عبدالله الحمود</h4>
@@ -631,7 +632,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
-                   <a href="cv-details.html" class="cv">
+                    <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-4.jpg" alt="">
                         <div class="mainInfo">
                             <h4>نورة سعد الدين</h4>
@@ -659,7 +660,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
-                   <a href="cv-details.html" class="cv">
+                    <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-1.jpg" alt="">
                         <div class="mainInfo">
                             <h4> خالد توفيق مجدى </h4>
@@ -687,7 +688,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 p-2">
-                   <a href="cv-details.html" class="cv">
+                    <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-2.jpg" alt="">
                         <div class="mainInfo">
                             <h4>عائشة محمد صالح</h4>
@@ -719,7 +720,6 @@
     <!-- contact us -->
     <section class="section"
         style="background-image: url('assets/images/s1.webp'); background-size: cover;background-position: center;">
-        <div class="bg-overlay bg-primary" style="opacity: 0.85;"></div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -1169,7 +1169,7 @@
             </div>
         </div>
     </section>
-<!-- JAVASCRIPT -->
+    <!-- JAVASCRIPT -->
     <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/libs/simplebar/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
