--- a/recruitment-offices.html
+++ b/recruitment-offices.html
@@ -158,7 +158,6 @@
                             تسجيل الدخول </a>
                         <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
                             حساب </a>
-
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
@@ -240,7 +239,7 @@
                                 <img src="assets/images/companies/1.svg" alt="" class="mx-auto d-block">
                             </div>
                             <div class="card-body text-center">
-                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                <a href="" class="stretched-link">
                                     <h6 class="fs-16 lh-base text-truncate"> عبر الشرق </h6>
                                 </a>
                             </div>
@@ -253,7 +252,7 @@
                                 <img src="assets/images/companies/2.svg" alt="" class="mx-auto d-block">
                             </div>
                             <div class="card-body text-center">
-                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                <a href="" class="stretched-link">
                                     <h6 class="fs-16 lh-base text-truncate"> الجوهرة الاولي </h6>
                                 </a>
                             </div>
@@ -266,7 +265,7 @@
                                 <img src="assets/images/companies/3.svg" alt="" class="mx-auto d-block">
                             </div>
                             <div class="card-body text-center">
-                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                <a href="" class="stretched-link">
                                     <h6 class="fs-16 lh-base text-truncate"> نسمة أكيم </h6>
                                 </a>
                             </div>
@@ -279,7 +278,7 @@
                                 <img src="assets/images/companies/4.svg" alt="" class="mx-auto d-block">
                             </div>
                             <div class="card-body text-center">
-                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                <a href="" class="stretched-link">
                                     <h6 class="fs-16 lh-base text-truncate"> بلاتنيوم الشرقية </h6>
                                 </a>
                             </div>
@@ -292,7 +291,7 @@
                                 <img src="assets/images/companies/5.svg" alt="" class="mx-auto d-block">
                             </div>
                             <div class="card-body text-center">
-                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                <a href="" class="stretched-link">
                                     <h6 class="fs-16 lh-base text-truncate"> روافد نجد </h6>
                                 </a>
                             </div>
@@ -305,7 +304,7 @@
                                 <img src="assets/images/companies/6.svg" alt="" class="mx-auto d-block">
                             </div>
                             <div class="card-body text-center">
-                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                <a href="" class="stretched-link">
                                     <h6 class="fs-16 lh-base text-truncate"> ترف </h6>
                                 </a>
                             </div>
@@ -318,18 +317,16 @@
                                 <img src="assets/images/companies/7.svg" alt="" class="mx-auto d-block">
                             </div>
                             <div class="card-body text-center">
-                                <a href="recruitment-offices-request.html" class="stretched-link">
+                                <a href="" class="stretched-link">
                                     <h6 class="fs-16 lh-base text-truncate"> موطن </h6>
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div><!--end conatiner-->
     </section>
-
     <!-- footer -->
     <section class="section footer-landing pb-0">
         <div class="container">
