--- a/blogs.html
+++ b/blogs.html
@@ -151,10 +151,11 @@
                         <!-- item-->
                         <h6 class="dropdown-header"> ريان سلمون </h6>
                         <a class="dropdown-item" href="account.html"> <i class="fa-light fa-user"></i> حسابي </a>
-                        <a class="dropdown-item" href="auth-signin.html"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
+                        <a class="dropdown-item" href="auth-signin.html"> <i
+                                class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
-                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
-                        
+                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
+                            حساب </a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
@@ -202,16 +203,18 @@
         <i class="ri-arrow-up-line"></i>
     </button>
     <!--end back-to-top-->
-    <section class="page-wrapper bg-primary">
+    <section class="ecommerce-about"
+        style="background-image: url('assets/images/s3.webp'); background-size: cover;background-position: center;">
+        <div class="bg-overlay bg-primary" style="opacity: 0.85;"></div>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="text-center d-flex align-items-center justify-content-between">
-                        <h4 class="text-white mb-0">تتبع الطلب</h4>
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <div class="text-center">
+                        <h1 class="text-white mb-0"> المقالات </h1>
                         <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb breadcrumb-light justify-content-center mb-0 fs-15">
-                                <li class="breadcrumb-item"><a href="#!"> حسابي </a></li>
-                                <li class="breadcrumb-item active" aria-current="page">تتبع الطلب</li>
+                            <ol class="breadcrumb breadcrumb-light justify-content-center mt-4">
+                                <li class="breadcrumb-item"><a href="#"> الرئيسية </a></li>
+                                <li class="breadcrumb-item active" aria-current="page"> المقالات </li>
                             </ol>
                         </nav>
                     </div>
@@ -219,8 +222,150 @@
             </div>
         </div>
     </section>
-
-    
+    <section class="section blog pt-5 blogIndex">
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-lg-4">
+                    <div class="card overflow-hidden">
+                        <img src="assets/images/s1.webp" class="img-fluid" alt="">
+                        <div class="card-body">
+                            <div class="blog-date bg-body-secondary rounded">
+                                <h4 class="mb-0">15</h4>
+                                <p class="text-muted mt-1"> ابريل </p>
+                            </div>
+                            <div class="mt-3">
+                                <a href="#!">
+                                    <h5 class="fs-17 lh-base"> تم توفير خدمة جديدة </h5>
+                                </a>
+                                <p class="text-muted fs-15 mt-2">
+                                    هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن
+                                    التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم
+                                    استخدام طريقة لوريم إيبسوم لأنها تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف عوضاً
+                                </p>
+                                <a href="#!" class="link-effect link-info"> قراءة المزيد
+                                    <i class="bi bi-arrow-right ms-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card overflow-hidden">
+                        <img src="assets/images/s2.webp" class="img-fluid" alt="">
+                        <div class="card-body">
+                            <div class="blog-date bg-body-secondary rounded">
+                                <h4 class="mb-0">23</h4>
+                                <p class="text-muted mt-1"> ابريل </p>
+                            </div>
+                            <div class="mt-3">
+                                <a href="#!">
+                                    <h5 class="fs-17 lh-base"> تم توفير خدمة جديدة </h5>
+                                </a>
+                                <p class="text-muted fs-15 mt-2">
+                                    هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن
+                                    التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم
+                                    استخدام طريقة لوريم إيبسوم لأنها تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف عوضاً
+                                </p>
+                                <a href="#!" class="link-effect link-info"> قراءة المزيد
+                                    <i class="bi bi-arrow-right ms-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card overflow-hidden">
+                        <img src="assets/images/s3.webp" class="img-fluid" alt="">
+                        <div class="card-body">
+                            <div class="blog-date bg-body-secondary rounded">
+                                <h4 class="mb-0">31</h4>
+                                <p class="text-muted mt-1"> ابريل </p>
+                            </div>
+                            <div class="mt-3">
+                                <a href="#!">
+                                    <h5 class="fs-17 lh-base"> تم توفير خدمة جديدة </h5>
+                                </a>
+                                <p class="text-muted fs-15 mt-2">
+                                    هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن
+                                    التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم
+                                    استخدام طريقة لوريم إيبسوم لأنها تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف عوضاً
+                                </p>
+                                <a href="#!" class="link-effect link-info"> قراءة المزيد
+                                    <i class="bi bi-arrow-right ms-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card overflow-hidden">
+                        <img src="assets/images/s1.webp" class="img-fluid" alt="">
+                        <div class="card-body">
+                            <div class="blog-date bg-body-secondary rounded">
+                                <h4 class="mb-0">15</h4>
+                                <p class="text-muted mt-1"> ابريل </p>
+                            </div>
+                            <div class="mt-3">
+                                <a href="#!">
+                                    <h5 class="fs-17 lh-base"> تم توفير خدمة جديدة </h5>
+                                </a>
+                                <p class="text-muted fs-15 mt-2">
+                                    هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن
+                                    التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم
+                                    استخدام طريقة لوريم إيبسوم لأنها تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف عوضاً
+                                </p>
+                                <a href="#!" class="link-effect link-info"> قراءة المزيد
+                                    <i class="bi bi-arrow-right ms-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card overflow-hidden">
+                        <img src="assets/images/s2.webp" class="img-fluid" alt="">
+                        <div class="card-body">
+                            <div class="blog-date bg-body-secondary rounded">
+                                <h4 class="mb-0">23</h4>
+                                <p class="text-muted mt-1"> ابريل </p>
+                            </div>
+                            <div class="mt-3">
+                                <a href="#!">
+                                    <h5 class="fs-17 lh-base"> تم توفير خدمة جديدة </h5>
+                                </a>
+                                <p class="text-muted fs-15 mt-2">
+                                    هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن
+                                    التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم
+                                    استخدام طريقة لوريم إيبسوم لأنها تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف عوضاً
+                                </p>
+                                <a href="#!" class="link-effect link-info"> قراءة المزيد
+                                    <i class="bi bi-arrow-right ms-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card overflow-hidden">
+                        <img src="assets/images/s3.webp" class="img-fluid" alt="">
+                        <div class="card-body">
+                            <div class="blog-date bg-body-secondary rounded">
+                                <h4 class="mb-0">31</h4>
+                                <p class="text-muted mt-1"> ابريل </p>
+                            </div>
+                            <div class="mt-3">
+                                <a href="#!">
+                                    <h5 class="fs-17 lh-base"> تم توفير خدمة جديدة </h5>
+                                </a>
+                                <p class="text-muted fs-15 mt-2">
+                                    هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن
+                                    التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم
+                                    استخدام طريقة لوريم إيبسوم لأنها تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف عوضاً
+                                </p>
+                                <a href="#!" class="link-effect link-info"> قراءة المزيد
+                                    <i class="bi bi-arrow-right ms-2"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- footer -->
     <section class="section footer-landing pb-0">
         <div class="container">
