--- a/cv-details.html
+++ b/cv-details.html
@@ -153,10 +153,11 @@
                         <!-- item-->
                         <h6 class="dropdown-header"> ريان سلمون </h6>
                         <a class="dropdown-item" href="account.html"> <i class="fa-light fa-user"></i> حسابي </a>
-                        <a class="dropdown-item" href="auth-signin.html"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
+                        <a class="dropdown-item" href="auth-signin.html"> <i
+                                class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
-                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
-                        
+                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
+                            حساب </a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
@@ -274,6 +275,13 @@
                     <div class="ecommerce-product-widgets mt-4 mt-lg-0">
                         <div class="mb-4">
                             <h4 class="lh-base mb-4"> علي عبدالله الحمود </h4>
+                            <div class="d-flex flex-column  gap-1 my-4">
+                                <span class="text-muted fs-14"> سعر الاستقدام : </span>
+                                <h1 class="fw-bold text-primary">
+                                    500
+                                    <span class="text-muted fw-normal fs-14"> ريال </span>
+                                </h1>
+                            </div>
                             <div class="row">
                                 <div class="col-6 p-2 d-flex align-items-center gap-2">
                                     <i class="fa-regular fa-sparkles fs-16 text-success"></i>
@@ -311,13 +319,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="d-flex flex-column  gap-1 my-4">
-                                <span class="text-muted fs-14"> سعر الاستقدام : </span>
-                                <h1 class="fw-bold text-primary">
-                                    500
-                                    <span class="text-muted fw-normal fs-14"> ريال </span>
-                                </h1>
-                            </div>
                         </div>
                         <div class="col-lg-12">
                             <div class="mt-3">
@@ -326,9 +327,6 @@
                                         <i class="fa-light fa-briefcase me-2"></i>
                                         طلب استقدام
                                     </button>
-                                    <button class="btn btn-soft-danger custom-toggle btn-hover" data-bs-toggle="button"
-                                        aria-pressed="true"> <span class="icon-on"><i class="ri-heart-line"></i></span>
-                                        <span class="icon-off"><i class="ri-heart-fill"></i></span> </button>
                                 </div>
                             </div>
                         </div>
@@ -422,13 +420,11 @@
                             <th> الغسيل : </th>
                             <td> جيد </td>
                         </tr>
-
                     </table>
                 </div>
             </div>
         </div>
     </section>
-
     <section class="section">
         <div class="container">
             <div class="row justify-content-center">
@@ -436,7 +432,7 @@
                     <div class="d-flex align-items-center justify-content-between mb-4 pb-1">
                         <h4 class="flex-grow-1 mb-0"> سير ذاتية مماثلة </h4>
                         <div class="flex-shrink-0">
-                            <a href="product-grid-defualt.html" class="link-effect link-secondary">
+                            <a href="recruitment-request.html" class="link-effect link-secondary">
                                 عرض الكل
                                 <i class="ri-arrow-left-line ms-1 align-bottom"></i>
                             </a>
@@ -446,7 +442,7 @@
             </div>
             <div class="row">
                 <div class="col-xxl-3 col-lg-4 col-sm-6">
-                   <a href="cv-details.html" class="cv">
+                    <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-1.jpg" alt="">
                         <div class="mainInfo">
                             <h4> خالد توفيق مجدى </h4>
@@ -474,7 +470,7 @@
                     </a>
                 </div>
                 <div class="col-xxl-3 col-lg-4 col-sm-6">
-                   <a href="cv-details.html" class="cv">
+                    <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-2.jpg" alt="">
                         <div class="mainInfo">
                             <h4>عائشة محمد صالح</h4>
@@ -501,7 +497,7 @@
                     </a>
                 </div>
                 <div class="col-xxl-3 col-lg-4 col-sm-6">
-                   <a href="cv-details.html" class="cv">
+                    <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-3.jpg" alt="">
                         <div class="mainInfo">
                             <h4>علي عبدالله الحمود</h4>
@@ -529,7 +525,7 @@
                     </a>
                 </div>
                 <div class="col-xxl-3 col-lg-4 col-sm-6">
-                   <a href="cv-details.html" class="cv">
+                    <a href="cv-details.html" class="cv">
                         <img src="assets/images/users/avatar-4.jpg" alt="">
                         <div class="mainInfo">
                             <h4>نورة سعد الدين</h4>
