--- a/recruitment-offices-request.html
+++ b/recruitment-offices-request.html
@@ -150,10 +150,11 @@
                         <!-- item-->
                         <h6 class="dropdown-header"> ريان سلمون </h6>
                         <a class="dropdown-item" href="account.html"> <i class="fa-light fa-user"></i> حسابي </a>
-                        <a class="dropdown-item" href="auth-signin.html"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
+                        <a class="dropdown-item" href="auth-signin.html"> <i
+                                class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
-                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
-                        
+                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
+                            حساب </a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
@@ -208,11 +209,11 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="text-center">
-                        <h1 class="text-white mb-0"> روافد نجد  </h1>
+                        <h1 class="text-white mb-0"> روافد نجد </h1>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb breadcrumb-light justify-content-center mt-4">
                                 <li class="breadcrumb-item"><a href="#"> مكاتب الاستقدام </a></li>
-                                <li class="breadcrumb-item active" aria-current="page"> روافد نجد  </li>
+                                <li class="breadcrumb-item active" aria-current="page"> روافد نجد </li>
                             </ol>
                         </nav>
                     </div>
@@ -280,7 +281,6 @@
                                     </ul>
                                 </div>
                             </div>
-                           
                             <!-- end accordion-item -->
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
@@ -366,7 +366,6 @@
                         <input type="text" class="form-control" autocomplete="off" placeholder="البحث عن ...">
                         <i class="ri-search-line search-icon"></i>
                     </div>
-
                     <div class="row">
                         <div class=" col-lg-4 col-sm-6">
                             <a href="cv-details.html" class="cv">
@@ -397,7 +396,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-2.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4>عائشة محمد صالح</h4>
@@ -424,7 +423,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-3.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4>علي عبدالله الحمود</h4>
@@ -452,7 +451,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-4.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4>نورة سعد الدين</h4>
@@ -480,7 +479,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-1.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4> خالد توفيق مجدى </h4>
@@ -508,7 +507,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-2.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4>عائشة محمد صالح</h4>
@@ -535,7 +534,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-3.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4>علي عبدالله الحمود</h4>
@@ -563,7 +562,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-4.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4>نورة سعد الدين</h4>
@@ -591,7 +590,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-1.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4> خالد توفيق مجدى </h4>
@@ -618,7 +617,6 @@
                                 <span class="more btn "> عرض التفاصيل </span>
                             </a>
                         </div>
-
                     </div>
                     <div
                         class="pagination-block pagination pagination-separated justify-content-center justify-content-sm-end  my-4">
