--- a/recruitment-request.html
+++ b/recruitment-request.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <title>عالم الاستقدام</title>
@@ -25,7 +24,6 @@
     <!-- custom Css-->
     <link href="assets/css/custom.min.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
     <!-- top -->
     <div class="top-tagbar">
@@ -150,10 +148,11 @@
                         <!-- item-->
                         <h6 class="dropdown-header"> ريان سلمون </h6>
                         <a class="dropdown-item" href="account.html"> <i class="fa-light fa-user"></i> حسابي </a>
-                        <a class="dropdown-item" href="auth-signin.html"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
+                        <a class="dropdown-item" href="auth-signin.html"> <i
+                                class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
-                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
-                        
+                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
+                            حساب </a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
@@ -410,10 +409,9 @@
                         <input type="text" class="form-control" autocomplete="off" placeholder="البحث عن ...">
                         <i class="ri-search-line search-icon"></i>
                     </div>
-
                     <div class="row">
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-1.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4> خالد توفيق مجدى </h4>
@@ -441,7 +439,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-2.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4>عائشة محمد صالح</h4>
@@ -468,7 +466,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-3.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4>علي عبدالله الحمود</h4>
@@ -496,7 +494,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-4.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4>نورة سعد الدين</h4>
@@ -524,7 +522,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-1.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4> خالد توفيق مجدى </h4>
@@ -552,7 +550,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-2.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4>عائشة محمد صالح</h4>
@@ -579,7 +577,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-3.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4>علي عبدالله الحمود</h4>
@@ -607,7 +605,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-4.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4>نورة سعد الدين</h4>
@@ -635,7 +633,7 @@
                             </a>
                         </div>
                         <div class=" col-lg-4 col-sm-6">
-                           <a href="cv-details.html" class="cv">
+                            <a href="cv-details.html" class="cv">
                                 <img src="assets/images/users/avatar-1.jpg" alt="">
                                 <div class="mainInfo">
                                     <h4> خالد توفيق مجدى </h4>
@@ -662,7 +660,6 @@
                                 <span class="more btn "> عرض التفاصيل </span>
                             </a>
                         </div>
-
                     </div>
                     <div
                         class="pagination-block pagination pagination-separated justify-content-center justify-content-sm-end  my-4">
@@ -779,5 +776,4 @@
     <script src="assets/js/jquery.fancybox.min.js"></script>
     <script src="assets/js/frontend/custom.js"></script>
 </body>
-
 </html>
