--- a/account.html
+++ b/account.html
@@ -218,7 +218,7 @@
                             <img src="assets/images/users/avatar-1.jpg" alt=""
                                 class="avatar-xl rounded p-1 bg-light mt-n3">
                             <div>
-                                <h5 class="fs-18"> احمد السيد </h5>
+                                <h5 class="fs-18"> ريان سلمون </h5>
                                 <div class="text-muted">
                                     <i class="bi bi-geo-alt"></i> الرياض / المملكة العربية السعودية
                                 </div>
